--- a/CovidAnalysisFinal.Rmd
+++ b/CovidAnalysisFinal.Rmd
@@ -9,9 +9,23 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
+# Statement of Interest
+
+This report is to analyze covid 19 cases and deaths within the United States. 
+
 ```{r}
 library(tidyverse)
 library(lubridate)
 library(scales)
+```
+
+# Data
+
+Data for this report is from John's Hopkins and can be found on [Github]("https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series")
+
+```{r Import Data}
+us_cases <- read_csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_US.csv")
+us_deaths <- read_csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_US.csv")
 ```
 
